@startuml

title __UI's Class Diagram__\n

  namespace com.journear.app {
    namespace ui {
      class com.journear.app.ui.CreateJourneyActivity {
          - alertDialog : AlertDialog
          - hourOfJourney : int
          - mapTextValueToJnGeoCodeItem : HashMap<String, JnGeocodeItem>
          - minuteOfJourney : int
          - timeTextView : TextView
          # onCreate()
          - configureAutoCompleteTextViewForSearch()
          - getCurrentInput()
          - setTimeInTextView()
      }
    }
  }
  

  namespace com.journear.app {
    namespace ui {
      class com.journear.app.ui.LoginActivity {
          ~ email : EditText
          ~ logTag : String
          ~ login : Button
          ~ password : EditText
          ~ responseErrorListener : ErrorListener
          ~ responseListener : Listener
          # onCreate()
          - afterLoginSuccess()
          - validateAndLogin()
          - validateInputs()
      }
    }
  }
  

  namespace com.journear.app {
    namespace ui {
      class com.journear.app.ui.MainActivity {
          {static} + MESSAGE_READ : int
          {static} + MY_HANDLE : int
          {static} + SERVICE_INSTANCE : String
          {static} + SERVICE_REG_TYPE : String
          {static} + TAG : String
          {static} + TXTRECORD_PROP_AVAILABLE : String
          + broadcastReceiver : BroadcastReceiver
          {static} ~ SERVER_PORT : int
          ~ discoveredDnsRecords : HashMap<String, NearbyDevice>
          ~ dnsSdResponseRecordListener : DnsSdTxtRecordListener
          ~ dnsSdResponseServiceListener : DnsSdServiceResponseListener
          {static} - PERMISSIONS_REQUEST_CODE : int
          - _channel : Channel
          - _manager : WifiP2pManager
          - devicesList : List<NearbyDevice>
          - intentFilter : IntentFilter
          - mAppBarConfiguration : AppBarConfiguration
          - recyclerView : RecyclerView
          + getChannel()
          + getManager()
          + onCreateOptionsMenu()
          + onSupportNavigateUp()
          # onCreate()
          - checkUserLogon()
          - decorateUiForUser()
          - discoverDevices()
          - getWifiP2pDnsSdServiceInfo()
          - shortToast()
          - showJourneys()
          - showList()
          - unregisterAllWifiP2p()
      }
    }
  }
  

  namespace com.journear.app {
    namespace ui {
      class com.journear.app.ui.StartActivity {
          ~ login : Button
          ~ register : Button
          # onCreate()
      }
    }
  }
  

  namespace com.journear.app {
    namespace ui {
      class com.journear.app.ui.UserRegisterActivity {
          ~ cancel : Button
          ~ dob : EditText
          ~ email : EditText
          ~ gender : RadioGroup
          ~ password : EditText
          ~ phone : EditText
          ~ picker : DatePickerDialog
          ~ register : Button
          ~ username : EditText
          # onCreate()
      }
    }
  }
  

  com.journear.app.ui.CreateJourneyActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.journear.app.ui.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.journear.app.ui.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.journear.app.ui.MainActivity o-- com.journear.app.core.entities.NearbyDevice : ndOwnJourneyPlan
  com.journear.app.ui.MainActivity o-- com.journear.app.ui.adapters.RecyclerViewAdapter : recyclerViewAdapter
  com.journear.app.ui.StartActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.journear.app.ui.UserRegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
